fix overflowing hero image

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ html {scroll-behavior: smooth;}
 .hero {
     position: relative;
     height: 100vh;
-    width: 100vw;
     overflow: hidden;
 }
 .img {
